--- a/style.css
+++ b/style.css
@@ -159,8 +159,11 @@ p {
 .section {
     padding: 50px;
     text-align: center;
-    max-width: 1200px;
     margin: auto;
+}
+.section__container {
+max-width: 1200px;
+margin: auto;
 }
 
 /* About */
@@ -170,11 +173,11 @@ p {
     margin: 80px 0;
 }
 
-.major__icon{
+.major__icon {
     width: 170px;
     height: 170px;
+    line-height: 170px;
     font-size: 70px;
-    line-height: 170px;    
     margin: auto;
     color: var(--color-blue);
     border: 1px solid var(--color-blue);
