--- a/style.css
+++ b/style.css
@@ -126,7 +126,14 @@ p {
     background-color: var(--color-dark-pink)
     
 }
-
+.navbar__toggle-btn {
+    position: absolute;
+    top: 20px;
+    right: 32px;
+    font-size: 24px;
+    color: white;
+    display: none;
+    }
 /* Home */
 #home{
     background: url('imgs/homebackground.png') center/cover no-repeat;
@@ -461,9 +468,8 @@ margin: auto;
   /* For below 768px screen width */
 @media screen and (max-width: 768px) {
     .navbar__toggle-btn {
-    display: block;
-    }
-
+        display: block;
+        }
     #navbar {
     flex-direction: column;
     align-items: flex-start;
