--- a/style.css
+++ b/style.css
@@ -335,6 +335,13 @@ margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    opacity: 1;
+    transition: all var(--animation-duration) ease-in;
+}
+
+.work__projects.anim-out{
+    opacity: 0;
+    transform: scale(0.96) translate(40px);
 }
 
 .project {
