--- a/style.css
+++ b/style.css
@@ -124,16 +124,14 @@ background-color: var(--color-pink);
     padding: 8px 12px;
     margin: 0 4px;
     cursor: pointer;
+    border: 1px solid transparent;    
     border-radius: var(--size-border-radius);
 }
 
-.navbar__menu__item.active {
-    border: 1px solid white;
-    border-radius: var(--size-border-radius);    
-}
+
 .navbar__menu__item:hover{
+    border-color: var(--color-white);
     background-color: var(--color-dark-pink)
-    
 }
 .navbar__toggle-btn {
     position: absolute;
@@ -304,13 +302,13 @@ margin: auto;
     padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
     background-color: var(--color-pink);
     color: var(--color-white);
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
     opacity: 1;
     top: 0;
@@ -384,7 +382,7 @@ margin: auto;
 }
 
 .project__description h3 {
-    color: var(--color-white);
+    color: var(--color-orange);
 }
 
 .project__description h3:after {
@@ -392,9 +390,9 @@ margin: auto;
     display: block;
     position: relative;
     left: 50%;
-    width: 25px;
+    width: 50px;
     height: 2px;
-    margin-left: -12px;
+    transform: translateX(-50%);
     margin-top: 8px;
     background-color: var(--color-dark-white);
 }
@@ -510,6 +508,11 @@ margin: auto;
     #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-pink);
+    }
+
+    #navbar.navbar--dark{
+        padding: 16px;
     }
 
     .navbar__menu {
@@ -517,6 +520,10 @@ margin: auto;
     text-align: center;
     width: 100%;
     display: none;
+    }
+
+    .navbar__menu.open{
+        display: block;
     }
 
     .about__majors {
