--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@ margin: auto;
     border-radius: var(--size-border-radius);
     font-size: var(--font-regular);
     padding: 8px 48px;
+    position: relative;
 }
 
 .category__btn.selected,
@@ -322,9 +323,9 @@ margin: auto;
     height: 24px;
     line-height: 24px;
     display: inline-block;
-    position: relative;
+    position: absolute;
     top: -20px;
-    left: 4px;
+    right: 16px;
     opacity: 0;
     transition: all var(--animation-duration) ease-in;
 }
@@ -339,7 +340,7 @@ margin: auto;
 
 .work__projects.anim-out{
     opacity: 0;
-    transform: scale(0.96) translate(40px);
+    transform: scale(0.7) translate(40px);
 }
 
 .project {
@@ -502,8 +503,19 @@ margin: auto;
 }
   /* For below 768px screen width */
 @media screen and (max-width: 768px) {
+    :root{
+    /* Font size */    
+    --font-large: 30px;
+    --font-medium: 18px;
+    --font-regular: 16px;
+    --font-small: 14px;
+    --font-micro: 12px;
+    }
     .navbar__toggle-btn {
         display: block;
+        top: 16px;
+        right: 16px;
+        font-size: 24px;
         }
     #navbar {
     flex-direction: column;
@@ -526,24 +538,60 @@ margin: auto;
         display: block;
     }
 
+    .section{
+        padding: 16px;
+        padding-top: 45px;
+    }
+
     .about__majors {
     flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
     }
 
     .major {
-    margin-bottom: 38px;
+    margin-bottom: 30px;
     }
 
     .skillset {
     flex-direction: column;
     }
 
+    .category__btn{
+        margin: 4px 0;
+        width: 100%;
+    }
+
     .project {
     flex-grow: 1;
     }
 
+    .testimonial {
+        flex-direction: column;
+        align-items: center;
+    }
+
     .testimonial__avatar {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;    
+    }
+
+    .testimonial__avatar:nth-child(even),
+    .testimonial__avatar:nth-child(odd){
+        margin: 0;
+        margin-bottom: 8px;
+    }
+
+    .testimonial__speech-bubble{
+        order: 1;
+    }
+
+    .arrow-up {
+    width: 50px; 
+    height: 50px;
+    font-size: 30px;
+    line-height: 50px;
+    right: 16px;
+    bottom: 16px;
     }
 }
