--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ background-color: var(--color-pink);
     border-radius: var(--size-border-radius);
 }
 
+.navbar__menu__item.active{
+    border: 1px solid var(--color-white);    
+}
+
 
 .navbar__menu__item:hover{
     border-color: var(--color-white);
